# dexai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BOOTSTRAP.md  CLAUDE.md  CODEBASE_AUDIT_REPORT.md  Caddyfile  Dockerfile  ENV.md  HEARTBEAT.md  IDENTITY.md  Makefile  PERSONA.md  README.md  USER.md  docker-compose.dev.yml  docker-compose.yml  install.sh  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
args/: adhd_mode.yaml  agent.yaml  automation.yaml  channels.yaml  dashboard.yaml  learning.yaml  memory.yaml  mobile_push.yaml  multimodal.yaml  office_integration.yaml  privacy.yaml  rate_limits.yaml  routing.yaml  security.yaml  setup.yaml  smart_notifications.yaml  system.yaml  system_access.yaml  system_prompt.yaml  task_engine.yaml  tasks.yaml  user.yaml  user.yaml.example  voice.yaml  working_memory.yaml  workspace.yaml
context/: adhd_design_principles.md  agent_framework_comparison.md  dexai_vs_claude_sdk_comparison.md  gap_analysis.md  office_integration_exploration.md  openclaw_research.md
context/agent-framework-review/: 01-core-architecture-review.md  02-installation-deployment-review.md  03-sandbox-security-review.md  04-session-state-review.md  05-extensibility-integrations-review.md  06-observability-operations-review.md  PROGRESS.md
deploy/systemd/: dexai-backend.service  dexai-channels.service  dexai.service
deploy/tailscale/: README.md  tailscale-serve.json
docs/: HARDENING.md  RUNBOOK.md  dex-first-conversation.md  installation.md
docs/templates/: AGENTS.md  BOOTSTRAP.md  ENV.md  HEARTBEAT.md  IDENTITY.md  PERSONA.md  USER.md
goals/: claude_sdk_migration.md  dashboard_crystal_dark_redesign.md  dashboard_landing_page_redesign.md  future_roadmap.md  future_sprint_plan.md  manifest.md  memory_context_compaction_design.md  memory_providers_design.md  multimodal_messaging.md  phase10_mobile_push.md  phase11_voice_interface.md  phase12_office_integration.md  phase12b_collaborative.md  phase12c_managed_proxy.md  phase12d_autonomous.md  phase15_multimodal_implementation.md  phase1_security.md  phase2_working_memory.md  phase3_adhd_comms.md  phase4_smart_notifications.md  phase5_task_engine.md  phase6_learning.md  phase7_dashboard.md  phase8_installation.md  phase8_ui_refresh.md  phase9_ci_testing.md  prd_addulting_ai_v1.md  prd_dexai_v1.md  sdk_alignment_review.md  task_orchestration.md
hardprompts/adhd/: brevity_instructions.md  one_thing_selection.md  rsd_reframe.md
hardprompts/memory/: commitment_detection.md  extract_facts.md  resumption_prompt.md  summarize_entry.md
hardprompts/security/: validate_input.md
hardprompts/tasks/: decomposition.md  friction_identification.md
memory/: MEMORY.md
migrations/: 0001_add_trace_id_to_audit.sql  0002_create_hook_metrics_table.sql  0003_create_cost_tracking_table.sql  0004_add_hash_chain_to_audit.sql  0005_add_advisory_cache_table.sql
mobile/: App.tsx  app.json  babel.config.js  package.json  tsconfig.json
mobile/assets/: README.md
scripts/: claude-tasks.sh  dev-stop.sh  dev.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_dashboard_api.py  test_install_script.py  test_message_pipeline.py  test_multimodal_flow.py  test_task_flow.py  test_workspace_integration.py
tests/unit/: __init__.py
tools/: cli.py  logging_config.py  manifest.md
tools/adhd/: __init__.py  language_filter.py  response_formatter.py
tools/agent/: __init__.py  client_factory.py  config_models.py  constants.py  hooks.py  model_selector.py  permissions.py  query_engine.py  response_formatter.py  schemas.py  sdk_client.py  sdk_tools.py  skill_tracker.py  skill_validator.py  subagents.py  system_prompt.py  test_system_prompt.py  workspace_manager.py
tools/automation/: __init__.py  flow_detector.py  heartbeat.py  notify.py  runner.py  scheduler.py  transition_calculator.py  triggers.py
tools/channels/: __init__.py  audio_processor.py  discord.py  gateway.py  image_generator.py  inbox.py  media_processor.py  models.py  router.py  sdk_handler.py  session_manager.py  slack.py  telegram.py  telegram_adapter.py  tts_generator.py  video_processor.py
tools/dashboard/: __init__.py
tools/learning/: __init__.py  energy_tracker.py  pattern_analyzer.py  task_matcher.py
tools/memory/: __init__.py  auto_recall.py  commitments.py  compact_processor.py  context_capture.py  context_resume.py  daemon.py  embed_memory.py  hybrid_search.py  l1_builder.py  memory_db.py  memory_read.py  memory_write.py  migrate_db.py  semantic_search.py  service.py
tools/mobile/: __init__.py  models.py
tools/office/: __init__.py  level_detector.py  models.py  oauth_manager.py  onboarding.py
tools/ops/: __init__.py  backup.py  budget_alerter.py  circuit_breaker.py  cost_tracker.py  migrate.py  prometheus.py  transparency.py
(+295 files in other folders)
