[project]
name = "dexai"
version = "0.1.0"
description = "Personal AI assistant for ADHD users - zero-maintenance, emotionally safe, one-thing focus"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "DexAI Team" }
]
keywords = ["ai", "assistant", "adhd", "productivity", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "croniter>=6.0.0",
    "watchdog>=6.0.0",
    # Dashboard backend
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
    # TUI setup wizard
    "textual>=0.89.0",
    "rich>=13.9.0",
    # Channel adapters (optional - installed as needed)
    # "python-telegram-bot>=21.0",
    # "discord.py>=2.4.0",
    # "slack-bolt>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
]
channels = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.4.0",
    "slack-bolt>=1.20.0",
]

[project.scripts]
dexai = "tools.cli:main"

[project.urls]
Repository = "https://github.com/slamb2k/dexai"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
exclude = ["tests*"]

# ─────────────────────────────────────────────────────────────────────────────
# pytest configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ─────────────────────────────────────────────────────────────────────────────
# ruff configuration (linter + formatter)
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".tmp",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI Depends)
    "B904",   # raise without from (too noisy)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["tools"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert is fine in tests
]
"tools/dashboard/backend/**/*.py" = [
    "B008",   # FastAPI Depends pattern
]

# ─────────────────────────────────────────────────────────────────────────────
# mypy configuration (type checker)
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for optional dependencies
[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "discord.*",
    "slack_bolt.*",
    "textual.*",
    "rich.*",
    "anthropic.*",
    "croniter.*",
    "watchdog.*",
]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────
# coverage configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["tools"]
branch = true
omit = [
    "tools/dashboard/frontend/*",
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
fail_under = 0  # Will increase as we add tests
